<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary" />


        <ToggleButton
            android:id="@+id/button_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_fav"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_backdrop" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/movie_poster_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_favorite">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="0dp"
                    android:layout_height="275dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/rating"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="0dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-smallcaps"
                        android:maxLines="2"
                        android:singleLine="false"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:textAllCaps="true" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="4dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="8.0"
                        android:textAlignment="center"
                        android:textColor="@color/pink_500"
                        android:textSize="28sp"
                        app:textAllCaps="true" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="4dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="2014-04-09"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        app:textAllCaps="true" />


                </RelativeLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/overview_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_card">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:textAllCaps="true" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/appbar_scrolling_view_behavior"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/videos_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/videos"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:textAllCaps="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/videos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/no_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/no_videos_available"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/reviews_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videos_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/reviews"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:textAllCaps="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fastScrollEnabled="true"
                    app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                    app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />

                <TextView
                    android:id="@+id/no_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/there_are_no_reviews_for_this_movie"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>